# intmax-hackaton

./: .gitignore  README.md  package-lock.json  package.json
raffle-prover-server/: Cargo.toml  README.md
raffle-prover-server/src/: circuit.rs  main.rs  server.rs
src/: App.jsx
web/: index.html  package-lock.json  package.json
web/src/: App.jsx
