[package]
name = "raffle-prover-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", branch = "master" }
ark-bls12-381 = "0.5.0"
ark-relations = { git = "https://github.com/arkworks-rs/snark.git", default-features = true }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.11.0"
hex = "0.4"
ark-groth16 = "0.5.0"
rand = "0.9.1"

[[bin]]
name = "main"
path = "src/main.rs"
